bindings/lisp/fa/midi.lisp

(in-package :faudio)
(define-foreign-type midi-device-type () () (:actual-type :pointer))
(define-parse-method midi-device () (make-instance 'midi-device-type))
(defclass midi-device () ((midi-device-ptr :initarg :midi-device-ptr)))
(defmethod translate-to-foreign (x (type midi-device-type)) (slot-value x 'midi-device-ptr))
(defmethod translate-from-foreign (x (type midi-device-type)) (make-instance 'midi-device :midi-device-ptr x))
(define-foreign-type midi-session-type () () (:actual-type :pointer))
(define-parse-method midi-session () (make-instance 'midi-session-type))
(defclass midi-session () ((midi-session-ptr :initarg :midi-session-ptr)))
(defmethod translate-to-foreign (x (type midi-session-type)) (slot-value x 'midi-session-ptr))
(defmethod translate-from-foreign (x (type midi-session-type)) (make-instance 'midi-session :midi-session-ptr x))
(define-foreign-type midi-stream-type () () (:actual-type :pointer))
(define-parse-method midi-stream () (make-instance 'midi-stream-type))
(defclass midi-stream () ((midi-stream-ptr :initarg :midi-stream-ptr)))
(defmethod translate-to-foreign (x (type midi-stream-type)) (slot-value x 'midi-stream-ptr))
(defmethod translate-from-foreign (x (type midi-stream-type)) (make-instance 'midi-stream :midi-stream-ptr x))
(defctype midi-session-callback (:pointer (:pointer :void)))
(defctype midi-stream-callback (:pointer (:pointer :void)))
(defctype midi-status-callback nullary)
(defctype midi-message-callback unary)
(defcfun (midi-begin-session "fa_midi_begin_session") midi-session)
(defcfun (midi-end-session "fa_midi_end_session") :void (a midi-session))
(defcfun (midi-with-session "fa_midi_with_session") :void (a midi-session-callback) (b ptr) (c error-callback) (d ptr))
(defcfun (midi-current-sessions "fa_midi_current_sessions") list)
(defcfun (midi-end-all-sessions "fa_midi_end_all_sessions") ptr)
(defcfun (midi-all "fa_midi_all") list (a midi-session))
(defcfun (midi-default "fa_midi_default") pair (a midi-session))
(defcfun (midi-default-input "fa_midi_default_input") midi-device (a midi-session))
(defcfun (midi-default-output "fa_midi_default_output") midi-device (a midi-session))
(defcfun (midi-add-status-callback "fa_midi_add_status_callback") :void (a midi-status-callback) (b ptr) (c midi-session))
(defcfun (midi-name "fa_midi_name") string (a midi-device))
(defcfun (midi-host-name "fa_midi_host_name") string (a midi-device))
(defcfun (midi-has-input "fa_midi_has_input") :boolean (a midi-device))
(defcfun (midi-has-output "fa_midi_has_output") :boolean (a midi-device))
(defcfun (midi-open-stream "fa_midi_open_stream") midi-stream (a midi-device))
(defcfun (midi-close-stream "fa_midi_close_stream") :void (a midi-stream))
(defcfun (midi-with-stream "fa_midi_with_stream") :void (a midi-device) (b midi-stream-callback) (c ptr) (d error-callback) (e ptr))
(defcfun (midi-add-message-callback "fa_midi_add_message_callback") :void (a midi-message-callback) (b ptr) (c midi-stream))
(defcfun (midi-schedule "fa_midi_schedule") :void (a time) (b action) (c midi-stream))

